web: fix table styling on mobile

--- a/web/src/authentik.css
+++ b/web/src/authentik.css
@@ -142,6 +142,15 @@ select[multiple] {
     .pf-c-table__sort-indicator i {
         color: var(--ak-dark-foreground) !important;
     }
+    /* table, on mobile */
+    @media screen and (max-width: 1200px) {
+        .pf-m-grid-xl.pf-c-table tbody:first-of-type {
+            border-top-color: var(--ak-dark-background);
+        }
+        .pf-m-grid-xl.pf-c-table tr:not(.pf-c-table__expandable-row) {
+            border-bottom-color: var(--ak-dark-background);
+        }
+    }
     /* class for pagination text */
     .pf-c-options-menu__toggle {
         color: var(--ak-dark-foreground);
